--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
          </li>
         </ul>
     </div>
-    <script src="sinpro1.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
